--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,7 +128,7 @@ img{
     left: 0;
     z-index: var(--z-fixed);
     transition: box-shadow .3s , background .4s;
-
+background-color: var(--body-color);
 }
 .nav{
     position: relative;
@@ -177,6 +177,10 @@ transition: color .3s ;
     }
  }
 
+ .bg-header{
+    box-shadow: 0 2px 8px hsla(19 , 64%, 24%, .1);
+ }
+
  .nav__list{
     display: flex;
     flex-direction: column;
@@ -223,4 +227,128 @@ transition: color .3s ;
 
  .show-menu{
     top: 0;
+ }
+
+ .home{
+    position: relative;
+ }
+
+ .home__container{
+    row-gap: 3rem;
+    padding-top: 2rem;
+ }
+
+ .home__img{
+    width: 300px;
+    justify-self:  center;
+ }
+
+ .home__data{
+    text-align: center;
+ }
+
+ .home__title{
+    font-size: var(--biggest-font-size);
+    font-family: var(--title-font);
+    margin-bottom: 1rem;
+ }
+
+ .home__title img{
+    width: 40px;
+
+ }
+
+ .home__title div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: .5rem;
+
+ }
+
+ .home__description{
+    padding: 0 1rem;
+    margin-bottom: 2.5rem;
+ }
+
+ .home__leaf-1 , .home__leaf-2{
+    position: absolute;
+    opacity: .2;
+ }
+
+ .home__leaf-1{
+    width: 80px;
+    top: 8rem;
+    left: -1rem;
+    transform: rotate(90deg);
+ }
+
+ .home__leaf-2{
+    width: 100px;
+    right: -2rem;
+    bottom: 1rem;
+    transform: rotate(-15deg);
+ }
+
+ .button{
+    display: inline-flex;
+    align-items: center;
+    column-gap: .5rem;
+    background-color: var(--first-color);
+    border-radius: 4rem;
+    color: #fff;
+    font-weight: var(--font-medium);
+    transition: background .3s;
+    padding: 1rem 1.5rem;
+ }
+
+ .button i{
+    font-size: 1.5rem;
+    transition: transform .3s ;
+ }
+
+ .button:hover{
+    background-color: var(--first-color-alt);
+
+ }
+
+ .button:hover i{
+    transform: translateX(.25rem);
+ }
+
+ .about{
+    position: relative;
+ }
+
+ .about__container{
+    row-gap: 3rem;
+ }
+
+ .about__data{
+    text-align: center;
+ }
+ .about__title img{
+    width: 30px;
+ }
+
+ .about__title div{
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    column-gap: .5rem;
+ }
+
+ .about__img{
+    width: 300px;
+    justify-self: center;
+ }
+
+ .about__leaf{
+    width: 100px;
+    opacity: .2;
+    position: absolute;
+    right: -1.5rem;
+    bottom: 11rem;
+    transform: rotate(-15deg);
  }
