--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -704,3 +704,60 @@ background-color: hsl(19, 8%, 75%);
 .active-link{
    color: var(--first-color);
 }
+
+
+.nav__buttons{
+   display: flex;
+   align-items: center;
+   column-gap: 1rem;
+
+}
+
+.change-theme{
+   font-size: 1.25rem;
+   color: var(--title-color);
+   cursor: pointer;
+   transition: color .3s;
+}
+
+body.dark-theme{
+   --first-color: hsl(19, 64%, 58%);
+   --first-color-alt: hsl(19, 64%, 54%);
+   --title-color: hsl(19, 16%, 85%);
+   --text-color: hsl(19, 16%, 65%);
+   --body-color: hsl(19, 12%, 8%);
+   --container-color: hsl(19, 10%, 10%);
+}
+
+.dark-theme .bg-header, 
+.dark-theme .nav__menu,
+.dark-theme .scrollup{
+   box-shadow: 0 2px 8px hsla(19, 64%, 4%, .5);
+
+}
+
+.dark-theme .popular__card{
+   box-shadow: 0 8px 20px hsla(19, 64%, 4%, .2);
+}
+
+.dark-theme .newsletter__content{
+   background-color: var(--container-color);
+}
+
+.dark-theme .newsletter__form, 
+.dark-theme .newsletter__input{
+   background-color: var(--body-color);
+}
+
+.dark-theme::-webkit-scrollbar{
+   background-color: hsl(19, 8%, 15%)
+}
+
+.dark-theme::-webkit-scrollbar-thumb{
+   background-color: hsl(19, 8%, 25%);
+}
+
+
+.dark-theme::-webkit-scrollbar-thumb:hover{
+   background-color: hsl(19, 8%, 35%);
+}
